Updated txt and history

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -5,11 +5,11 @@ Changelog
 ------------------
 
 * z3c.autoinclude support [keul]
-* "Error purging" will also dispay the error code [keul]
+* "Error purging" will also display the error code [keul]
 * More documentation [keul]
 
-1.0 - 15/02/2010
+1.0 - 2010-02-15
 ----------------
 
-* Initial release
+* Initial release [amleczko]
 
