--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,13 +1,15 @@
 Changelog
 =========
 
-1.1.0 (Unreleased)
+1.1.0 (2011-05-23)
 ------------------
 
 * Documentation fixes [keul]
 * Added a ``review_state`` field [keul]
 * Fixed permission of the "Purge" action menu to the
   proper ones [keul]
+* Fixed bug that make possible to all to purge pages [keul]
+* added translations [keul]
 
 1.0.1 (2011-01-27)
 ------------------
