--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.4.0 (Unreleased)
+------------------
+
+* Try to support also Plone 4 [keul]
+
 1.3.0 (2012-03-28)
 ------------------
 
