--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,8 +4,7 @@ Changelog
 1.4.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
-
+* Proper uninstall procedure [keul]
 
 1.4.0 (2012-08-01)
 ------------------
