--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,16 @@
 Changelog
 =========
 
-1.4.1 (unreleased)
+1.5.0 (unreleased)
 ------------------
 
 * Proper uninstall procedure [keul]
+* Added licences files [keul]
+* Removed the review state autopurge feature
+  (if needed, can be done in another package) [keul]
+* ``friendly_messages``has been transformed to a more flexible ``verbosity``
+  option [keul]
+* added a configuration panel [keul]
 
 1.4.0 (2012-08-01)
 ------------------
